gmp (2:5.1.2+dfsg-2) unstable; urgency=low

  * rules(libgmp-dev): Install gmp.h into multi-arch include directory.
    Closes: #675577
  
  * Remove lib64gmp* packages.

 -- Steve M. Robbins <smr@debian.org>  Sun, 30 Jun 2013 20:38:46 -0500

gmp (2:5.1.2+dfsg-1) unstable; urgency=low

  * New upstream.
    - reduced SQR_TOOM2_THRESHOLD to 30.  Closes: #706984.
  
  * patches/preserve-ia64-registers.patch: New.  Upstream patch to
    preserve registers.  Closes: #708264.

 -- Steve M. Robbins <smr@debian.org>  Thu, 23 May 2013 23:23:44 -0500

gmp (2:5.1.1+dfsg-3) unstable; urgency=low

  * Upload to unstable.

 -- Steve M. Robbins <smr@debian.org>  Sun, 05 May 2013 20:38:15 -0500

gmp (2:5.1.1+dfsg-2) experimental; urgency=low

  * rules: Need to set ABI=x32 at configure time.  Closes: #698000.
  
  * Change to source format 3.0 (quilt).

 -- Steve M. Robbins <smr@debian.org>  Sun, 17 Mar 2013 21:54:08 -0500

gmp (2:5.1.1+dfsg-1) experimental; urgency=low

  * New upstream.
    - added support for x32.  Closes: #698000.
  
  * fix-gmp.sh: Add support for __aarch64__ (closes: #693467).

 -- Steve M. Robbins <smr@debian.org>  Mon, 18 Feb 2013 18:01:16 -0600

gmp (2:5.1.0+dfsg-1) experimental; urgency=low

  * New upstream.
  
  * rules: Use hardening build flags.  

  * control: Update to debhelper compat level 9.

 -- Steve M. Robbins <smr@debian.org>  Tue, 18 Dec 2012 23:52:36 -0600

gmp (2:5.0.5+dfsg-2) unstable; urgency=low

  * Revert to FAT binary situation of 5.0.4: disabled for amd64,
    kfreebsd-amd64, and lpia; enabled for all other architectures.
  
  * control: Mark libgmp-dev as "Multi-arch: same", requested by Wookey
    http://lists.alioth.debian.org/pipermail/debian-science-maintainers/2012-May/013386.html

 -- Steve M. Robbins <smr@debian.org>  Fri, 01 Jun 2012 17:22:56 -0500

gmp (2:5.0.5+dfsg-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Revert to --disable-fat, as it seems to cause gcc to abort on some
    machines (closes: #671866)
